--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,13 @@
     .highlight { background-color: #fff3cd; }
     .conflict { background-color: #f8d7da; }
     .loading { font-style: italic; color: #666; }
+    form input, form textarea, form select, form button {
+      display: block;
+      margin: 0.5em 0;
+      padding: 0.5em;
+      width: 100%;
+      max-width: 500px;
+    }
   </style>
 </head>
 <body>
@@ -44,6 +51,42 @@
         <tr><td colspan="2" class="loading">Loading...</td></tr>
       </tbody>
     </table>
+  </section>
+
+  <section id="submission-section">
+    <h2>✍️ Contribute a Report</h2>
+    <form id="submission-form">
+      <label>
+        Type:
+        <select name="category" required>
+          <option value="">--Select--</option>
+          <option value="timeline">Timeline Event</option>
+          <option value="conflict">Contradiction</option>
+        </select>
+      </label>
+      <label>
+        Date/Time:
+        <input type="datetime-local" name="datetime" required />
+      </label>
+      <label>
+        Title or Issue (for conflict):
+        <input type="text" name="issue" />
+      </label>
+      <label>
+        Description:
+        <textarea name="description" rows="4" required></textarea>
+      </label>
+      <label>
+        Source (optional):
+        <input type="text" name="source" />
+      </label>
+      <label>
+        Your Name (optional):
+        <input type="text" name="submittedBy" />
+      </label>
+      <button type="submit">Submit</button>
+      <div id="form-response"></div>
+    </form>
   </section>
 
   <script>
@@ -83,64 +126,39 @@
       }
     }
 
+    document.getElementById('submission-form').addEventListener('submit', async function (e) {
+      e.preventDefault();
+      const form = e.target;
+      const formData = new FormData(form);
+      const data = Object.fromEntries(formData.entries());
+
+      if (!data.category || !data.description || !data.datetime) {
+        return alert('Please fill out the required fields.');
+      }
+
+      data.date = data.datetime;
+
+      try {
+        const res = await fetch('/api/reports', {
+          method: 'POST',
+          headers: {'Content-Type': 'application/json'},
+          body: JSON.stringify(data)
+        });
+
+        if (res.ok) {
+          document.getElementById('form-response').innerText = '✅ Submitted successfully';
+          form.reset();
+          loadReports();
+        } else {
+          throw new Error('Submission failed');
+        }
+      } catch (err) {
+        document.getElementById('form-response').innerText = '❌ Submission failed';
+      }
+    });
+
     loadReports();
   </script>
-<<<<<<< HEAD
-=======
-  <script>
-  fetch('/api/reports')
-    .then(res => res.json())
-    .then(data => {
-      const tbody = document.querySelector('tbody');
-      tbody.innerHTML = ''; // clear
-      data.forEach(row => {
-        const tr = document.createElement('tr');
-        tr.className = row.category === 'conflict' ? 'conflict' : '';
-        tr.innerHTML = `<td>${row.date}</td><td>${row.description}</td>`;
-        tbody.appendChild(tr);
-      });
-    });
-</script>
-<script>
-  async function loadReports() {
-    try {
-      const res = await fetch('/api/reports');
-      const reports = await res.json();
-
-      const timelineTable = document.getElementById('timeline-body');
-      const conflictTable = document.getElementById('conflict-body');
-
-      timelineTable.innerHTML = '';
-      conflictTable.innerHTML = '';
-
-      reports.forEach(report => {
-        if (report.category === 'timeline') {
-          const row = document.createElement('tr');
-          row.innerHTML = `
-            <td>${new Date(report.datetime || report.date).toLocaleString()}</td>
-            <td>${report.description || report.event}<br><small><em>${report.source || ''}</em></small></td>
-          `;
-          timelineTable.appendChild(row);
-        }
-
-        if (report.category === 'conflict') {
-          const row = document.createElement('tr');
-          row.classList.add('conflict');
-          row.innerHTML = `
-            <td>${report.issue || '—'}</td>
-            <td>${report.description}<br><small><em>${report.source || ''}</em></small></td>
-          `;
-          conflictTable.appendChild(row);
-        }
-      });
-    } catch (err) {
-      console.error('Failed to load reports:', err);
-    }
-  }
-
-  loadReports();
-</script>
->>>>>>> dd8e88ecb3122c616d90d156a8b1423e58c26d88
 
 </body>
 </html>
